--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Uwe Fechner <fechner@aenarete.eu> and contributors"]
 version = "0.1.0"
 
 [deps]
+Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
 
 [compat]
 julia = "1"
