--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
 
 [compat]
 julia = "1"
+Observables="0.5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
