--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Joysticks"
 uuid = "82f05805-4863-42dc-b1a7-0852bd62c632"
 authors = ["Uwe Fechner <fechner@aenarete.eu> and contributors"]
-version = "0.1.2"
+version = "0.1.3"
 
 [deps]
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
@@ -12,6 +12,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 [compat]
 GLFW = "3"
 Observables = "0.4, 0.5"
+Reexport = "1"
 julia = "1"
 
 [extras]
